--- a/ZapAgenda-api-aspnet.csproj
+++ b/ZapAgenda-api-aspnet.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="FluentResults" Version="3.16.0" />
+    <PackageReference Include="FluentResults.Extensions.AspNetCore" Version="0.1.0" />
+    <PackageReference Include="FluentResults.Extensions.FluentAssertions" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
